welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
	while(!estSurBisuit){
		continu();
		if(vuBiscuit()){
			recule(6);
		}else{
			droite();avance();gauche();
		}
		
	}
}

def vuBiscuit():Boolean = {
	if(estsurBiscuit()){
		return true;
		}else{
		return false;
		}
}



def continu(){
	var x = 0;
	do{
		avance();
		x = x + 1;
	}while(x != 6)}//avance dans la colonne(testé)

